overlays/magi/verdesumergido/routes/verdesumergido-http-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: verdesumergido-http-redirect
spec:
  parentRefs:
    - name: verdesumergido-gateway
      sectionName: http
  hostnames:
    - vs.vbalex.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
