overlays/magi/verdesumergido/routes/verdesumergido-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: verdesumergido
spec:
  parentRefs:
    - name: verdesumergido-gateway
      sectionName: https
  hostnames:
    - vs.vbalex.com
  rules:
    - backendRefs:
        - name: verdesumergido-app
          port: 80
